tests/parsing/smtlib/poly/errors/009_exists_missing_body_2.psmt2
(set-logic ALL)
(assert (exists ((x int)) as))
