tests/parsing/smtlib/poly/errors/009_exists_missing_body_2.expected
File "tests/parsing/smtlib/poly/errors/009_exists_missing_body_2.psmt2", line 2, character 26-28:
Error while parsing a term, read the reserved word 'as',
      but expected a term (body for the existencial quantification).
